force-app/main/default/objects/Inpatient_Admission__c/Inpatient_Admission__c.object-meta.xml
<CustomObject>
    <label>Inpatient Admission</label>
    <nameField>
        <label>Inpatient Admission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inpatient Admission</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>