force-app/main/default/objects/Inpatient_Admission__c/fields/Bed_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Bed_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bed Inventory</label>
    <referenceTo>Bed_Inventory__c</referenceTo>
    <relationshipLabel>Inpatient Admission</relationshipLabel>
    <relationshipName>Inpatient_Admission</relationshipName>
    <type>Lookup</type>
</CustomField>