force-app/main/default/objects/Inpatient_Admission__c/fields/Condition_Summary__c.field-meta.xml
<CustomField>
    <fullName>Condition_Summary__c</fullName>
    <label>Condition Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>