force-app/main/default/objects/Inpatient_Admission__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inpatient Admission</relationshipLabel>
    <relationshipName>Inpatient_Admission</relationshipName>
    <type>Lookup</type>
</CustomField>