force-app/main/default/objects/Inpatient_Admission__c/fields/Total_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Charges__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(Admission_Date__c)),
        NOT(ISBLANK(Discharge_Date__c)),
        NOT(ISBLANK(Bed_Inventory__r.Cost_Per_Day__c))
    ),
    ( (Discharge_Date__c - Admission_Date__c) + 1 ) * Bed_Inventory__r.Cost_Per_Day__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>