force-app/main/default/objects/Inpatient_Admission__c/listViews/Inpatient_Admission.listView-meta.xml
<ListView>
    <fullName>Inpatient_Admission</fullName>
    <columns>NAME</columns>
    <columns>Bed_Inventory__c</columns>
    <columns>Patient__c</columns>
    <columns>Assigned_Doctor__c</columns>
    <columns>Admission_Date__c</columns>
    <columns>Discharge_Date__c</columns>
    <columns>Total_Charges__c</columns>
    <filterScope>Mine</filterScope>
    <label>Inpatient Admission</label>
</ListView>